<resources>
    <string name="test_update_url">http://dn-rocky.qbox.me/shanglvguanjiaversion.xml</string>
    <string name="formal_update_url">http://gatewayv3.51jp.cn/version.xml</string>
    <string name="formal_server_url">http://gatewayv3.51jp.cn/gateway</string>
    <string name="test_server_url">http://gatewayceshi.51jp.cn/gateway</string>
    <string name="formal_pay_server_url">http://gatewayv3.51jp.cn/PayMent/BeginPay.aspx?orderID=%1$s&amp;amount=%2$s&amp;userid=%3$s&amp;paysystype=%4$s&amp;siteid=%5$s&amp;sign=%6$s</string>
    <string name="test_pay_server_url">http://gatewayceshi.51jp.cn/PayMent/BeginPay.aspx?orderID=%1$s&amp;amount=%2$s&amp;userid=%3$s&amp;paysystype=%4$s&amp;siteid=%5$s&amp;sign=%6$s</string>
    <string name="formal_train_validcode">http://gatewayv3.51jp.cn/TrainVCode.aspx</string>
    <string name="test_train_validcode">http://gatewayceshi.51jp.cn/TrainVCode.aspx</string>
    <string name="formal_flight_company_logo">http://gatewayv3.51jp.cn/airPic/%1$s.gif</string>
    <string name="test_flight_company_logo">http://gatewayceshi.51jp.cn/airPic/%1$s.gif</string>
    <string name="formal_about">http://m.51jp.cn/Aboutv2?productType=%1$s&amp;userKey=%2$s&amp;version=%3$s</string>
    <string name="test_about">http://m.51jp.cn/Aboutv2?productType=%1$s&amp;userKey=%2$s&amp;version=%3$s</string>
    <string name="weipingtai_url">http://www.ivpin.com/index.php?g=Wap&amp;m=Index&amp;a=index&amp;token=worfgy1407749355&amp;wecha_id=o3wS7uPFDFcwJML3_w8Hz2guObMo</string>
    <string name="shangxueyuan_url">http://www.ivpin.com/index.php?g=Wap&amp;m=Index&amp;a=index&amp;token=rgymbm1407985742&amp;wecha_id=oTbUkt8EJFxsugj9QK5nR4SNztRU</string>
    <string name="btoc_baoxian_price">￥20</string>
    <string name="app_name">商旅管家</string>
    <string name="app_name_b">商旅助手</string>
    <string name="app_name_menghang">梦航商旅</string>
    <string name="app_name_tiankong">天空商旅</string>
    <string name="app_name_anshun">安顺票务</string>
    <string name="app_name_ee98">EE98商旅</string>
    <string name="app_name_like">利客商旅</string>
    <string name="app_name_kunlun">昆仑旅行网</string>
    <string name="app_name_wanyou">万游商旅</string>
    <string name="app_name_nanbei">南北商旅平台</string>
    <string name="app_name_sida">四达商旅平台</string>
    <string name="app_name_fenxiao">商旅分销平台</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="selectcity">请选择城市</string>
    <string name="searchhint">中文/拼音/首字母</string>
    <string name="guoneijipiao">国内机票</string>
    <string name="content_description"></string>
    <string name="dingdan">订单</string>
    <string name="shouye">首页</string>
    <string name="wode">我的</string>
    <string name="gengduo">更多</string>
    <string name="menu_settings">Settings</string>
    <string name="type_0">单程</string>
    <string name="type_1">往返</string>
    <string name="startcity">出发城市</string>
    <string name="start">出发</string>
    <string name="end">到达</string>
    <string name="selectstartcity">选择出发城市</string>
    <string name="endcity">到达城市</string>
    <string name="startdate">出发日期</string>
    <string name="enddate">返程日期</string>
    <string name="searchflight">搜索航班</string>
    <string name="guonijipiaochaxun">国内机票查询</string>
    <string name="guojijipiaochaxun">国际机票查询</string>
    <string name="tuangou">团购</string>
    <string name="jingdian">景点门票</string>
    <string name="flist">国内航班列表</string>
    <string name="flistdetail">国内机票详情</string>
    <string name="search">搜索</string>
    <string name="ok">确定</string>
    <string name="register">用户注册</string>
    <string name="login">会员登录</string>
    <string name="uname">用户名</string>
    <string name="email">邮箱</string>
    <string name="sex">性别</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="mobile">手机号</string>
    <string name="code">验证码</string>
    <string name="password">密码</string>
    <string name="upass">修改密码</string>
    <string name="oldpassword">旧密码</string>
    <string name="newpassword">新密码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="registernew">注册新帐号></string>
    <string name="forgetpassword">忘记密码</string>
    <string name="forgetpassword_title">找回密码</string>
    <string name="getpassword">获取密码</string>
    <string name="forgetpassword_hint">请在下面输入您的手机号码，系统将自动通过短息把密码发送到您的手机上。</string>
    <string name="confirm">确认密码</string>
    <string name="recommend">邀请码</string>
    <string name="register_hint">请您输入正确的手机号码，以便以后积分兑换，现金返还，以及找回遗失密码</string>
    <string name="uname_hint">请输入6~15位</string>
    <string name="mobile_hint">请输入手机号</string>
    <string name="password_hint">请输入密码</string>
    <string name="confirm_hint">确认密码</string>
    <string name="recommend_hint">请输入邀请码</string>
    <string name="registerbtn">注册并登录</string>
    <string name="loginbtn">登录</string>
    <string name="maohao">:</string>
    <string name="time">时间</string>
    <string name="price">价格</string>
    <string name="book">预订</string>
    <string name="book_title">填写机票订单</string>
    <string name="taxoil">机建/燃油</string>
    <string name="ticketsales">机票</string>
    <string name="tax">机建</string>
    <string name="oil">燃油</string>
    <string name="fee">返点</string>
    <string name="tuipiao_title">退票条件</string>
    <string name="remark">退改签</string>
    <string name="submit">提交订单</string>
    <string name="contact_info">联系人信息</string>
    <string name="contact_hint">添加联系人</string>
    <string name="insurance_info">保险信息</string>
    <string name="insurance_hint">购买保险（每人20元）</string>
    <string name="itinerary_info">是否需要行程单（作为报销凭证）</string>
    <string name="ordertotal">订单总计：</string>
    <string name="passenger_info">乘机人信息</string>
    <string name="passenger_hint">添加乘机人</string>
    <string name="newpassenger">新增乘机人</string>
    <string name="addpassenger">添加乘机人</string>
    <string name="addcontact">添加联系人</string>
    <string name="selectpassenger">选择乘机人</string>
    <string name="pname">乘机人姓名</string>
    <string name="ptype">乘机人类型</string>
    <string name="idtype">证件类型</string>
    <string name="idno">证件号码</string>
    <string name="add">添加</string>
    <string name="name">姓名</string>
    <string name="contactdetail">联系人是接收订单状态等相关短信的人，请输入需要接收短信人的姓名和手机号</string>
    <string name="addressee">收件人</string>
    <string name="selectprovince">选择省/市/区</string>
    <string name="address">接收地址</string>
    <string name="mailprice">邮寄金额</string>
    <string name="hangbandongtai">航班动态</string>
    <string name="hangbandongtai_hint">动态信息仅供参考，具体相关状态以相关机场信息为准</string>
    <string name="hangbandongtai_flist">航班动态列表</string>
    <string name="state">航班状态：</string>
    <string name="scity">起飞机场：</string>
    <string name="planfly">计划起飞：</string>
    <string name="realfly">实际起飞：</string>
    <string name="planreach">计划到达：</string>
    <string name="realreach">实际到达：</string>
    <string name="ecity">到达机场：</string>
    <string name="train">火车票</string>
    <string name="train_hint">火车时刻信息仅供参考</string>
    <string name="trainlist">火车查询列表</string>
    <string name="yz">硬座</string>
    <string name="rz">软座</string>
    <string name="yw">卧铺</string>
    <string name="wz">无座</string>
    <string name="hotelsearch">酒店查询</string>
    <string name="commen">常规查询</string>
    <string name="location">周边酒店</string>
    <string name="keyword">酒店名、热门区域等</string>
    <string name="checkindate">入住日期</string>
    <string name="yesterday">前一天</string>
    <string name="tomorrow">后一天</string>
    <string name="checkoutdate">离店日期</string>
    <string name="searchhotel">搜索酒店</string>
    <string name="searchrange">搜索半径</string>
    <string name="hotellist">酒店列表</string>
    <string name="listtype">列表模式</string>
    <string name="maptype">地图模式</string>
    <string name="addmore">加载更多</string>
    <string name="hotellocation">酒店位置</string>
    <string name="mylocation">我的位置</string>
    <string name="star">星级</string>
    <string name="hoteldetail">酒店详情</string>
    <string name="hotelorder">酒店订单</string>
    <string name="qi">起</string>
    <string name="hotel">酒店:</string>
    <string name="date">日期:</string>
    <string name="room">房型:</string>
    <string name="roomcount">间数:</string>
    <string name="arrivetime">到店:</string>
    <string name="request">要求:</string>
    <string name="guest_hint">添加入住人</string>
    <string name="guest_info">入住人信息</string>
    <string name="order_hint">支付方式：酒店现付</string>
    <string name="newguest">新增入住人</string>
    <string name="addguest">添加入住人</string>
    <string name="selectguest">选择入住人</string>
    <string name="gname">入住人姓名</string>
    <string name="gtype">入住人类型</string>
    <string name="hotelmodify">修改订单信息</string>
    <string name="specialrequest">特殊要求</string>
    <string name="roomcount_1">房间数:</string>
    <string name="arrivetime_1">最晚到店:</string>
    <string name="request_0">加床</string>
    <string name="request_1">安排无烟房</string>
    <string name="request_2">安排大床房</string>
    <string name="request_3">安排双床房</string>
    <string name="request_4">安排宽带</string>
    <string name="me">会员中心</string>
    <string name="yue">可用余额:</string>
    <string name="me_modify">编辑个人信息</string>
    <string name="guoneijipiaoorderlist">国内机票订单</string>
    <string name="guojijipiaoorderlist">国际机票订单</string>
    <string name="hotelorderlist">酒店订单</string>
    <string name="orderdetail">订单详情</string>
    <string name="orderid">订单号</string>
    <string name="orderamount">订单金额</string>
    <string name="orderstatus">订单状态</string>
    <string name="paytype">支付方式</string>
    <string name="amount">总价</string>
    <string name="roomname">房型:</string>
    <string name="meal">早餐:</string>
    <string name="isinternet">宽带:</string>
    <string name="unitprice">单价:</string>
    <string name="jiangjin">返现:</string>
    <string name="indate">入住:</string>
    <string name="outdate">离店:</string>
    <string name="credit">信用卡担保</string>
    <string name="creditid">信用卡号</string>
    <string name="creditdate">有效期至</string>
    <string name="creditcvv">CVV2码</string>
    <string name="creditname">持卡人</string>
    <string name="creditidtype">证件类型</string>
    <string name="creditidno">证件号码</string>
    <string name="creditid_1">信用卡号:</string>
    <string name="creditdate_1">有效期至:</string>
    <string name="creditcvv_1">CVV2码:</string>
    <string name="creditname_1">持卡人:</string>
    <string name="creditidtype_1">证件类型:</string>
    <string name="creditidno_1">证件号码:</string>
    <string name="onemonth">一个月内</string>
    <string name="onemonthago">一个月前</string>
    <string name="orderpay">订单支付</string>
    <string name="payamount">支付金额</string>
    <string name="goonbook">继续预订</string>
    <string name="paysuccess">恭喜您！\n订单支付成功。</string>
    <string name="payfail">对不起！\n您的订单支付失败。</string>
    <string name="payfail_hint">请核对证件号、有效日期是否与证件上的一致，并保证手机的网络畅通。支付失败不会对你的支付卡产生任何扣费。</string>
    <string name="repay">重新支付</string>
    <string name="repay_hint">提示：30分钟内可以进行重新支付</string>
    <string name="refresh">下拉刷新</string>
    <string name="remote_call_failed">Failure calling remote service</string>
    <string name="partnerHint">"partner"</string>
    <string name="sellerHint">"seller"</string>
    <string name="out_trade_noHint">"out_trade_no"</string>
    <string name="subjectHint">"subject"</string>
    <string name="bodyHint">"body"</string>
    <string name="total_feeHint">"total_fee"</string>
    <string name="notify_urlHint">"notify_url"</string>
    <string name="charsetHint">"charset"</string>
    <string name="receipt_number">收款金额</string>
    <string name="receipt_order_number">订单号</string>
    <string name="input_order_number">输入订单号</string>
    <string name="exit">退出</string>
    <string name="activate_company_id">输入公司ID</string>
    <string name="company_skid">输入授权码</string>
    <string name="about">关于</string>
    <string name="shou">收款</string>
    <string name="logout">切换账户</string>
</resources>