<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffffff"
    android:orientation="vertical" >
	 
    <ViewFlipper
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/radio_group" />   
          
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bottom_bj"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_order"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabs_bottom_dd"
            android:textColor="@color/tabs_text_color"
            android:text="@string/dingdan" />

        <RadioButton
            android:id="@+id/radio_home"
            style="@style/main_tab_bottom"
            android:checked="true"
            android:drawableTop="@drawable/tabs_bottom_sy"
            android:textColor="@color/tabs_text_color"
            android:text="@string/shouye" />
        
        <RadioButton
            android:id="@+id/radio_mine"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabs_bottom_wd"
            android:textColor="@color/tabs_text_color"
            android:text="@string/wode" />

        <RadioButton
            android:id="@+id/radio_more"
            style="@style/main_tab_bottom"
            android:drawableTop="@drawable/tabs_bottom_gd"
            android:textColor="@color/tabs_text_color"
            android:text="@string/gengduo" />
        
    </RadioGroup>
 </RelativeLayout>