<?xml version="1.0" encoding="utf-8"?>
<!-- mobilepos 客户端收款金额输入界面主要内容 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <include layout="@layout/mpos_head_item" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top|left"
            android:orientation="vertical"
            android:paddingTop="5dp" >

            <EditText
                android:id="@+id/receipt_number"
                style="@style/editStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/receipt_number"
                android:inputType="number|numberSigned|numberDecimal"
                android:maxLength="11"
                android:numeric="decimal" />

            <TextView
                android:id="@+id/num_error"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:textColor="#ffff0000"
                android:textSize="20sp"
                android:visibility="gone" >
            </TextView>

            <CheckBox
                android:id="@+id/recipt_input_order"
                style="@style/checkboxStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:button="@drawable/checkbox_bg"
                android:checked="false"
                android:text="@string/input_order_number"
                android:visibility="gone" />

            <EditText
                android:id="@+id/recipt_order_number"
                style="@style/editStyle"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/receipt_order_number"
                android:inputType="text"
                android:maxLength="256"
                android:visibility="gone" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/submit"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_cannot"
            android:clickable="false"
            android:text="@string/shou"
            android:textSize="20sp" />

        <LinearLayout
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/yue"
                android:layout_width="145dp"
                android:layout_height="48dp"
                android:background="@drawable/button_clickable"
                android:clickable="true"
                android:text="@string/yue"
                android:textSize="17sp" />

            <Button
                android:id="@+id/about"
                android:layout_width="145dp"
                android:layout_height="48dp"
                android:layout_marginLeft="9dp"
                android:background="@drawable/button_clickable"
                android:clickable="true"
                android:text="@string/about"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/logout"
                android:layout_width="145dp"
                android:layout_height="48dp"
                android:background="@drawable/button_clickable"
                android:clickable="true"
                android:text="@string/logout"
                android:textSize="17sp" />

            <Button
                android:id="@+id/exit"
                android:layout_width="145dp"
                android:layout_height="48dp"
                android:layout_marginLeft="9dp"
                android:background="@drawable/button_clickable"
                android:clickable="false"
                android:text="@string/exit"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>