<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFFFF" >

    <RelativeLayout
        android:id="@+id/text_bg"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_height"
        android:background="@drawable/titile_bg" >

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/flist"
            android:textColor="#FFFFFFFF"
            android:textSize="20sp" >
        </TextView>

        <ImageButton
            android:id="@+id/back_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:background="@drawable/back" >
        </ImageButton>

        <ImageButton
            android:id="@+id/home_imgbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="#00000000"
            android:src="@drawable/home" >
        </ImageButton>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/title_bg"
        android:layout_width="fill_parent"
        android:layout_height="35dp"
        android:layout_below="@id/text_bg"
        android:background="@drawable/serchtype_bg" >

        <LinearLayout
            android:id="@+id/date_yesterday_ll"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:orientation="horizontal" >
		    <ImageView
	            android:id="@+id/left_arrow_iv"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:background="@drawable/solid_arrow_left" >
	        </ImageView>
            <TextView
                android:id="@+id/date_yesterday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="4dp"
                android:gravity="center"
                android:text="@string/yesterday"
                android:textColor="@color/black6"
                android:textSize="14sp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/date_current_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="8-7"
                android:textColor="@color/text_blue"
                android:textSize="15sp" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/date_tomorrow_ll"
            android:layout_width="80dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/date_tomorrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow"
                android:textColor="@color/black6"
                android:textSize="14sp" >
            </TextView>
            
           <ImageView
            android:id="@+id/right_arrow_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/solid_arrow_right" >
        </ImageView>
        </LinearLayout>

    </RelativeLayout>
    
    <RelativeLayout
        android:id="@+id/bottom_bg"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/serchtype_bg_reverse" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/bytime_LL"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sort_time_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F5F5F5"
                    android:text="@string/time"
                    android:textColor="@color/text_blue_select"
                    android:textSize="15sp" />
                <ImageView
		            android:id="@+id/sort_arrow_time_iv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="5dp"
		            android:background="@drawable/sort_arrow_down" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/byprice_ll"
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_marginLeft="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/sort_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#F5F5F5"
                    android:text="@string/price"
                    android:textColor="@color/text_blue_select"
                    android:textSize="15sp" />
                <ImageView
		            android:id="@+id/sort_arrow_price_iv"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginLeft="5dp"
		            android:background="@drawable/sort_arrow_up" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    
   <ListView
        android:id="@+id/listview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/title_bg"
        android:layout_centerVertical="true"
        android:layout_marginBottom="40dp" >
    </ListView>

</RelativeLayout>